--- a/Assets/Scenes/UI/UI Toolkit/MenuStyle.uss
+++ b/Assets/Scenes/UI/UI Toolkit/MenuStyle.uss
@@ -28,7 +28,205 @@
     padding-bottom: 0;
     padding-top: 0;
     padding-right: 0;
+    transition-property: translate;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-out-sine;
 }
 
 .menu-button:hover {
+    opacity: 1;
+    display: flex;
+    visibility: visible;
+    overflow: visible;
+    width: 500px;
+    height: 80px;
+    margin-left: 15px;
+    margin-top: 5px;
+    margin-right: 15px;
+    margin-bottom: 5px;
+    -unity-font-definition: url("project://database/Assets/Scenes/UI/Fonts/Inter-Black.ttf?fileID=12800000&guid=c69802a066d4fc44fae8a0d64394d898&type=3#Inter-Black");
+    font-size: 40px;
+    color: rgb(238, 252, 250);
+    -unity-text-align: middle-left;
+    -unity-text-outline-color: rgba(0, 0, 0, 0);
+    background-color: rgb(42, 157, 143);
+    border-bottom-color: rgb(39, 136, 124);
+    border-right-color: rgb(39, 136, 124);
+    border-left-color: rgb(39, 136, 124);
+    border-top-color: rgb(39, 136, 124);
+    border-top-width: 5px;
+    border-left-width: 5px;
+    border-bottom-width: 5px;
+    border-right-width: 5px;
+    transform-origin: left;
+    padding-left: 25px;
+    padding-bottom: 0;
+    padding-top: 0;
+    padding-right: 0;
+    transition-property: translate;
+    transition-duration: 0.1s;
+    translate: 2px -2px;
+    transition-timing-function: ease-in-sine;
+    cursor: initial;
+}
+
+.menu-button:focus {
+    opacity: 1;
+    display: flex;
+    visibility: visible;
+    overflow: visible;
+    width: 500px;
+    height: 80px;
+    margin-left: 15px;
+    margin-top: 5px;
+    margin-right: 15px;
+    margin-bottom: 5px;
+    -unity-font-definition: url("project://database/Assets/Scenes/UI/Fonts/Inter-Black.ttf?fileID=12800000&guid=c69802a066d4fc44fae8a0d64394d898&type=3#Inter-Black");
+    font-size: 40px;
+    color: rgb(238, 252, 250);
+    -unity-text-align: middle-left;
+    -unity-text-outline-color: rgba(0, 0, 0, 0);
+    background-color: rgb(42, 157, 143);
+    border-bottom-color: rgb(39, 136, 124);
+    border-right-color: rgb(39, 136, 124);
+    border-left-color: rgb(39, 136, 124);
+    border-top-color: rgb(39, 136, 124);
+    border-top-width: 5px;
+    border-left-width: 5px;
+    border-bottom-width: 5px;
+    border-right-width: 5px;
+    transform-origin: left;
+    padding-left: 25px;
+    padding-bottom: 0;
+    padding-top: 0;
+    padding-right: 0;
+    transition-property: translate;
+    transition-duration: 0.1s;
+    translate: 0 0;
+    transition-timing-function: ease-in-sine;
+    cursor: initial;
+}
+
+.menu-button #OutlineBorder {
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+    border-left-color: rgb(238, 252, 250);
+    border-right-color: rgb(238, 252, 250);
+    border-top-color: rgb(238, 252, 250);
+    border-bottom-color: rgb(238, 252, 250);
+    border-top-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
+    border-left-width: 3px;
+    opacity: 0;
+    transition-property: opacity;
+    transition-timing-function: ease-out-sine;
+    transition-duration: 0.1s;
+}
+
+.menu-button:hover #OutlineBorder {
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    border-top-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
+    border-left-width: 3px;
+    opacity: 1;
+    transition-property: opacity;
+    transition-duration: 0.15s;
+    transition-timing-function: ease-in-sine;
+}
+
+.menu-button:focus #OutlineBorder {
+    position: absolute;
+    top: -10px;
+    left: -10px;
+    right: -10px;
+    bottom: -10px;
+    border-left-color: rgb(255, 255, 255);
+    border-right-color: rgb(255, 255, 255);
+    border-top-color: rgb(255, 255, 255);
+    border-bottom-color: rgb(255, 255, 255);
+    border-top-width: 3px;
+    border-right-width: 3px;
+    border-bottom-width: 3px;
+    border-left-width: 3px;
+    opacity: 0;
+    transition-property: scale, opacity;
+    transition-duration: 0.15s, 0.1s;
+    transition-timing-function: ease-in-sine, ease-in-sine;
+    scale: 1.1 1.1;
+}
+
+.menu-button #ArrowBG {
+    min-width: 0;
+    transition-property: min-width;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-out-sine;
+}
+
+.menu-button:hover #ArrowBG {
+    width: 70px;
+    scale: 1 1;
+    transform-origin: right;
+    min-width: 70px;
+    transition-property: min-width;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-sine;
+}
+
+.menu-button:focus #ArrowBG {
+    width: 490px;
+    scale: 1 1;
+    transform-origin: right;
+    min-width: 490px;
+    transition-property: min-width;
+    transition-duration: 0.15s;
+    transition-timing-function: ease-out-sine;
+}
+
+.menu-button #Arrow {
+    background-image: url("project://database/Assets/Scenes/UI/Assets/Arrow.png?fileID=2800000&guid=0bdd1bba5de5ce74b981d86a86ac0dd5&type=3#Arrow");
+    position: absolute;
+    left: 500px;
+    top: 15px;
+    right: 10px;
+    bottom: 15px;
+    transition-property: left;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-out-sine;
+}
+
+.menu-button:hover #Arrow {
+    background-image: url("project://database/Assets/Scenes/UI/Assets/Arrow.png?fileID=2800000&guid=0bdd1bba5de5ce74b981d86a86ac0dd5&type=3#Arrow");
+    position: absolute;
+    left: 435px;
+    top: 15px;
+    right: 10px;
+    bottom: 15px;
+    transition-property: left;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-in-sine;
+}
+
+.menu-button:focus #Arrow {
+    background-image: url("project://database/Assets/Scenes/UI/Assets/Arrow.png?fileID=2800000&guid=0bdd1bba5de5ce74b981d86a86ac0dd5&type=3#Arrow");
+    position: absolute;
+    left: 500px;
+    top: 15px;
+    right: 10px;
+    bottom: 15px;
+    transition-property: left;
+    transition-duration: 0.1s;
+    transition-timing-function: ease-out-sine;
 }
